# weblogue

./: .travis.yml  Cargo.toml  Procfile  README.md  Rocket.toml  RustConfig  TODO.txt  travis.yml
migrations/2018-11-10-225253_create_posts/: down.sql  up.sql
migrations/2018-11-12-013258_create_posts/: up.sql
migrations/src/: schema.rs
src/: lib.rs  main.rs  models.rs  schema.rs  tests.rs  weblogue.rs
static/css/: style.css
static/scripts/: colorpicker.js
templates/: about.html.tera  aside.html.tera  base.html.tera  colorpicker.html.tera  footer.html.tera  header.html.tera  index.html.tera  nav.html.tera  posts.html.tera
