[package]
name = "weblogue"
version = "0.1.0"
authors = ["lukewosborne@gmail.com"]


[[bin]]
name = "weblogue"
path = "src/weblogue.rs"

[lib]
name = "weblogue_lib"
path = "src/lib.rs"

[dependencies]
rocket = "0.4.0-rc.1"
rocket_codegen = "0.4.0-rc.1"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
tera = "0.11.19"


[dependencies.rocket_contrib]
version = "0.4.0-rc.1"
default-features = false
features = ["tera_templates", "serve"]
