[package]
name = "weblogue"
version = "0.1.0"
authors = ["Luke O <lukewosborne@gmail.com>"]

[lib]
name = "weblogue"
path = "src/lib.rs"

[dependencies]

# Web Server
rocket = "0.4.0-rc.1"
rocket_codegen = "0.4.0-rc.1"
rocket_contrib = { version = "0.4.0-rc.1", default-features = false, features = ["tera_templates", "serve"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tera = "0.11"
fake = "1.2.2"

# Database
diesel = { version = "1.0", features = ["chrono", "postgres", "r2d2"] }

# System
dotenv = "0.10"
